--- a/404.html
+++ b/404.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>404</title>
-  <link rel="icon" href="https://investln.github.io/img/logo.webp">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" integrity="sha256-MBffSnbbXwHCuZtgPYiwMQbfE7z+GOZ7fBPCNB06Z98=" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <!-- End Google Tag Manager -->
@@ -20,9 +19,8 @@
       <h1 class="display-2 fw-bold">404</h1>
       <p class="fs-3"><span class="text-danger">哎呀!</span>我們迷失了_____方向。</p>
       <p class="lead">您要查找的頁面不存在。</p>
-      <a href="{% url 'home' %}" class="btn text-primary-emphasis">返回首頁</a>
+      <a href="/" class="btn text-primary-emphasis">返回首頁</a>
     </div>
   </div>
 </body>
-  <script src="https://getbootstrap.com/docs/5.3/assets/js/color-modes.js" integrity="sha256-xTq4pgMY/qwwc5sFhV4+t2B640A0Qh+LKMjysqwviSg=" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </html>
